Name:                blip
Version:             0.4.0
Synopsis:            Python bytecode compiler and interpreter.
Homepage:            https://github.com/bjpop/blip  
License:             BSD3
License-file:        LICENSE
Author:              Bernie Pope
Maintainer:          Bernie Pope <florbitous@gmail.com>
Stability:           Experimental
category:            Language 
Build-type:          Simple
Cabal-version:       >=1.8
Description:
   Main entry point for Python bytecode compiler and interpreter.

source-repository head
  type: git
  location: git://github.com/bjpop/blip.git

Executable blip {
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  main-is: Main.hs
  hs-source-dirs: src
  build-depends: base,
     bliplib          == 0.4.0,
     blipcompiler     == 0.4.0,
     blipinterpreter  == 0.4.0,
     base             >= 4.14.0 && < 4.15,
     bytestring       >= 0.10.10 && < 0.11,
     containers       >= 0.6.2 && < 0.7,
     exceptions       >= 0.10.4 && < 0.11,
     mtl              >= 2.2.2 && < 2.3,
     pretty           >= 1.1.3 && < 1.2,
     filepath         >= 1.4.2 && < 1.5,
     haskeline        >= 0.8.0 && < 0.9,
     language-python  >= 0.5.8 && < 0.6,
     old-time         >= 1.1.0 && < 1.2,
     parseargs        >= 0.2.0 && < 0.3
  other-modules:
     ProgName,
     Repl
}
