Name:                blipinterpreter
Version:             0.4.0
Synopsis:            Python bytecode interpreter.
Homepage:            https://github.com/bjpop/blip  
License:             BSD3
License-file:        LICENSE
Author:              Bernie Pope
Maintainer:          Bernie Pope <florbitous@gmail.com>
Stability:           Experimental
category:            Language 
Build-type:          Simple
Cabal-version:       >=1.8
Description:
  Simple reference implementation of a bytecode interpreter for Python 3.

source-repository head
  type: git
  location: git://github.com/bjpop/blip.git

Library {
   ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
   hs-source-dirs: src
   exposed-modules:
      Blip.Interpreter.Interpret
      Blip.Interpreter.Types
      Blip.Interpreter.State
      Blip.Interpreter.Prims
      Blip.Interpreter.HashTable.Array
      Blip.Interpreter.HashTable.Basic
      Blip.Interpreter.HashTable.CacheLine
      Blip.Interpreter.HashTable.IntArray
      Blip.Interpreter.HashTable.Utils
      Blip.Interpreter.StandardObjectID
      Blip.Interpreter.Builtins 
   build-depends:
      base            >= 4.14.0 && < 4.15,
      bliplib         == 0.4.0,
      bytestring      >= 0.10.10 && < 0.11,
      containers      >= 0.6.2 && < 0.7,
      filepath        >= 1.4.2 && < 1.5,
      hashable        >= 1.3.0 && < 1.4,
      language-python >= 0.5.8 && < 0.6,
      mtl             >= 2.2.2 && < 2.3,
      parseargs       >= 0.2.0 && < 0.3,
      primitive       >= 0.7.1 && < 0.8,
      vector          >= 0.12.1 && < 0.13
   other-modules:
}
