Name:                blip 
Version:             0.1.0
Synopsis:            Python to bytecode compiler.
Homepage:            https://github.com/bjpop/blip  
License:             BSD3
License-file:        ../LICENSE
Author:              Bernie Pope
Maintainer:          Bernie Pope <florbitous@gmail.com>
Stability:           Experimental
category:            Development
Build-type:          Simple
Cabal-version:       >=1.8
Description:
 Compiles Python 3 source code to bytecode. The resulting
 bytecode is written to a '.pyc' file, compatible with the
 CPython implementation (the default Python interpreter).

Executable blip {
  main-is: Main.hs
  hs-source-dirs: src
  build-depends: base==4.*,
     bliplib == 0.1.*,
     directory == 1.1.*,
     filepath == 1.3.*,
     parseargs == 0.1.* ,
     language-python==0.3.*,
     mtl==2.1.*,
     containers==0.4.*,
     bytestring==0.9.*,
     old-time==1.1.*,
     pretty==1.1.*
}
