Name:                blipinterpreter
Version:             0.3.0
Synopsis:            Python bytecode interpreter.
Homepage:            https://github.com/bjpop/blip  
License:             BSD3
License-file:        LICENSE
Author:              Bernie Pope
Maintainer:          Bernie Pope <florbitous@gmail.com>
Stability:           Experimental
category:            Language 
Build-type:          Simple
Cabal-version:       >=1.8
Description:
  Simple reference implementation of a bytecode interpreter for Python 3.

source-repository head
  type: git
  location: git://github.com/bjpop/blip.git

Library {
   ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
   hs-source-dirs: src
   exposed-modules:
      Blip.Interpreter.Interpret
      Blip.Interpreter.Types
      Blip.Interpreter.State
      Blip.Interpreter.Prims
      Blip.Interpreter.HashTable.Array
      Blip.Interpreter.HashTable.Basic
      Blip.Interpreter.HashTable.CacheLine
      Blip.Interpreter.HashTable.IntArray
      Blip.Interpreter.HashTable.Utils
      Blip.Interpreter.StandardObjectID
      Blip.Interpreter.Builtins 
   build-depends:
      base==4.*,
      bliplib == 0.3.*,
      filepath == 1.3.*,
      parseargs == 0.1.* ,
      language-python==0.5.*,
      mtl==2.1.*,
      containers==0.5.*,
      bytestring==0.10.*,
      vector==0.10.*,
      primitive==0.5.*,
      hashable==1.1.*
   other-modules:
}
