Name:                bliplib
Version:             0.1.0
Synopsis:            Support code for Blip.
Homepage:            https://github.com/bjpop/blip 
License:             BSD3
License-file:        ../LICENSE
Author:              Bernie Pope
Maintainer:          Bernie Pope <florbitous@gmail.com>
Stability:           Experimental
category:            Development
Build-type:          Simple
Cabal-version:       >=1.8
Description:

Library {
   hs-source-dirs: src
   exposed-modules:
      Blip.Bytecode,
      Blip.Marshal,
      Blip.MarshalDouble,
      Blip.Pretty,
      Blip.Version
   build-depends:
      base==4.*,
      binary==0.5.*,
      mtl==2.1.*,
      containers==0.4.*,
      pretty==1.1.*,
      bytestring==0.9.*,
      utf8-string==0.3.*
   other-modules:
      Paths_bliplib
}
