Name:                readpyc
Version:             0.1.0
Synopsis:            Read and pretty print Python bytecode (.pyc) files.
Homepage:            https://github.com/bjpop/blip 
License:             BSD3
License-file:        ../LICENSE
Author:              Bernie Pope
Maintainer:          Bernie Pope <florbitous@gmail.com>
Stability:           Experimental
category:            Development
Build-type:          Simple
Cabal-version:       >=1.8
Description:

Executable readpyc {
   main-is: Main.hs
   hs-source-dirs: src
   build-depends:
      base==4.*,
      bliplib==0.1.*,
      parseargs==0.1.*
}
