Name:                readpyc
Version:             0.2.0
Synopsis:            Read and pretty print Python bytecode (.pyc) files.
Homepage:            https://github.com/bjpop/blip 
License:             BSD3
License-file:        LICENSE
Author:              Bernie Pope
Maintainer:          Bernie Pope <florbitous@gmail.com>
Stability:           Experimental
category:            Language 
Build-type:          Simple
Cabal-version:       >=1.8
Description:         Read and pretty print Python bytecode (.pyc) files.

source-repository head
  type: git
  location: git://github.com/bjpop/blip.git

Executable readpyc {
   ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
   main-is: Main.hs
   hs-source-dirs: src
   build-depends:
      base==4.*,
      bliplib==0.2.*,
      parseargs==0.1.*
}
